server listing and send message successfully.